// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroMedia component should render correctly 1`] = `null`;

exports[`HeroMedia component should render hero image correctly 1`] = `
<View
  style={undefined}
>
  <AtomComponent
    crop="fill"
    gravity="custom"
    height={undefined}
    url="media_image"
    width={undefined}
  />
</View>
`;

exports[`HeroMedia component should render hero video correctly 1`] = `
<View
  style={undefined}
>
  <Video
    hashKey="hashKey"
    streamProviderCode={0}
  />
</View>
`;

exports[`HeroMedia component should render hero video preview correctly 1`] = `
<View
  style={undefined}
>
  <VideoPreview
    height={undefined}
    style={undefined}
    video={
      Object {
        "hashKey": "hashKey",
        "streamProviderCode": 0,
      }
    }
    width={undefined}
  />
</View>
`;
